# gefter-api

./: .env  .gitignore  app.py  config.py  main.py  pyproject.toml  requirements.txt
api/core/: dependencies.py  injector.py  models.py  repository.py
api/invoice_shares/: models.py  repository.py  service.py
api/invoices/: models.py  repository.py  resources.py  service.py
api/user/: models.py  repository.py  resources.py  service.py
api/utils/: dependencies.py  py_object_id.py
migrations/: env.py
migrations/versions/: 439a4bf1ecdb_user_tables.py
